<resources>
    <string name="app_name">集散地</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 注册   登录 -->
    <string name="login_setpwd_new">设置新密码</string>
    <string name="login_notice">登录</string>
    <string name="login_notice_password_retrieve">找回密码</string>
    <string name="login_user_id">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_register_straightway">立即注册</string>
    <string name="login_notice_quick">无账号快捷登录</string>
    <string name="login_quick_verification_code_get">获取验证码</string>
    <string name="login_quick_verification_code_input">请输入短信验证码</string>
    <string name="login_quick_phone_number">手机号</string>
    <string name="login_quick_button">验证并登陆</string>
    <string name="register_notice">注册</string>
    <string name="register_verification_code_get">获取验证码</string>
    <string name="register_verification_code_submit">提交验证码</string>
    <string name="register_agreement_read_text">我已阅读并同意</string>
    <string name="register_agreement_text">找桌网用户协议</string>
    <string name="register_verification_code_input">请输入短信验证码</string>
    <string name="register_phone_number_input">请输入您的手机号</string>
    <string name="register_password_input_new">请输入新密码</string>
    <string name="register_password_input">请输入密码</string>
    <string name="register_password_confirm">请再次输入密码</string>
    <string name="register_step_1">1 输入手机号</string>
    <string name="register_step_2">2 输入验证码</string>
    <string name="register_step_3">3 设置密码</string>
    <string name="login_input_empty">输入不能为空！</string>
    <string name="login_no_user">该用户不存在！</string>
    <string name="login_failed">用户名或密码错误！</string>
    <string name="login_pwd_illegal">您输入了非法字符</string>
    <string name="login_quick_failed">快速登录失败！亲，别灰心，再试试！</string>
    <string name="login_quick_phone_illegal">您输入的号码不是手机号！</string>

    <!-- pull to refresh strings -->
    <string name="header_hint_refresh_normal">下拉即可刷新</string>
    <string name="header_hint_refresh_ready">松开即可刷新</string>
    <string name="header_hint_refresh_loading">使劲加载中，请稍后...</string>
    <string name="header_hint_refresh_time">更新于:</string>
    <string name="footer_hint_load_normal">使劲加载中，请稍后...</string>
    <string name="footer_hint_load_ready">使劲加载中，请稍后...</string>

    <!-- 公告Activity-->
    <string name="noticelist_title">公告列表</string>
    <string name="notice_title">公告详情</string>
    <!-- 商品列表 -->
    <string name="merchandiselist_title">商品列表</string>
    <string name="merchandise_new_title">新品列表</string>
    <string name="merchandise_discount_title">特惠商品列表</string>
    <string name="merchandisedetail_title">商品详情</string>
    <string name="merchandise_intro">商品介绍</string>

    <!-- MyIdentityActivity -->
    <string name="my_identity">我的名片</string>

    <string name="toolbar_search">搜索</string>
    <string name="toolbar_test">test</string>
    <string name="toolbar_contact">联系客服</string>


    <string name="location_choose">请选择省市区</string>
    <string name="location_confirm">确定</string>
    <string name="location_cancel">取消</string>
</resources>
