<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_background_color">

    <include layout="@layout/login_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray_background_color"
        android:layout_margin="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/edit_login_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/login_user_id" />

            <EditText
                android:id="@+id/edit_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/login_password" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/click"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:text="@string/login_notice" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/main_theme_color"
                android:text="@string/login_register_straightway"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/pwd_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/main_theme_color"
                android:text="@string/login_notice_password_retrieve"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:gravity="center_vertical" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
